; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_tree.c_fz_tree_insert.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_tree.c_fz_tree_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_10__*, %struct.TYPE_10__*, i32 }

@tree_sentinel = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_10__* @fz_tree_insert(i32* %0, %struct.TYPE_10__* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_10__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %12 = icmp ne %struct.TYPE_10__* %11, null
  br i1 %12, label %13, label %50

13:                                               ; preds = %4
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %15 = icmp ne %struct.TYPE_10__* %14, @tree_sentinel
  br i1 %15, label %16, label %50

16:                                               ; preds = %13
  %17 = load i8*, i8** %8, align 8
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @strcmp(i8* %17, i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %16
  %25 = load i32*, i32** %6, align 8
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 1
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %27, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = call %struct.TYPE_10__* @fz_tree_insert(i32* %25, %struct.TYPE_10__* %28, i8* %29, i8* %30)
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %32, i32 0, i32 1
  store %struct.TYPE_10__* %31, %struct.TYPE_10__** %33, align 8
  br label %44

34:                                               ; preds = %16
  %35 = load i32*, i32** %6, align 8
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %37, align 8
  %39 = load i8*, i8** %8, align 8
  %40 = load i8*, i8** %9, align 8
  %41 = call %struct.TYPE_10__* @fz_tree_insert(i32* %35, %struct.TYPE_10__* %38, i8* %39, i8* %40)
  %42 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %43 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %42, i32 0, i32 0
  store %struct.TYPE_10__* %41, %struct.TYPE_10__** %43, align 8
  br label %44

44:                                               ; preds = %34, %24
  %45 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %46 = call %struct.TYPE_10__* @fz_tree_skew(%struct.TYPE_10__* %45)
  store %struct.TYPE_10__* %46, %struct.TYPE_10__** %7, align 8
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %48 = call %struct.TYPE_10__* @fz_tree_split(%struct.TYPE_10__* %47)
  store %struct.TYPE_10__* %48, %struct.TYPE_10__** %7, align 8
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  store %struct.TYPE_10__* %49, %struct.TYPE_10__** %5, align 8
  br label %55

50:                                               ; preds = %13, %4
  %51 = load i32*, i32** %6, align 8
  %52 = load i8*, i8** %8, align 8
  %53 = load i8*, i8** %9, align 8
  %54 = call %struct.TYPE_10__* @fz_tree_new_node(i32* %51, i8* %52, i8* %53)
  store %struct.TYPE_10__* %54, %struct.TYPE_10__** %5, align 8
  br label %55

55:                                               ; preds = %50, %44
  %56 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  ret %struct.TYPE_10__* %56
}

declare dso_local i32 @strcmp(i8*, i32) #1

declare dso_local %struct.TYPE_10__* @fz_tree_skew(%struct.TYPE_10__*) #1

declare dso_local %struct.TYPE_10__* @fz_tree_split(%struct.TYPE_10__*) #1

declare dso_local %struct.TYPE_10__* @fz_tree_new_node(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
